base/020-sapws-connector/fuse-020-sapws-connector-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  creationTimestamp: ~
  labels: 
    app: sapws-connector
  name: sapws-connector
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: sapws-connector
  strategy: {}
  template: 
    metadata: 
      creationTimestamp: ~
      labels: 
        app: sapws-connector
    spec: 
      containers: 
        - 
          securityContext:
            privileged: false
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: "docker.prospecta.com/prospecta/mdo-sapws-connector:development"
          name: sapws-connector
          ports:
            - name: spring-port
              containerPort: 8080
              protocol: TCP
            - name: grpc-port
              containerPort: 10000
              protocol: TCP
          resources: {}
      securityContext: {}
      imagePullSecrets:
        - name: nexus-image-pull
---
