base/020-sapws-connector/fuse-020-sapws-connector-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: sapws-connector
  name: sapws-connector
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sapws-connector
---
