base/020-sapws-connector/fuse-020-sapws-connector-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: sapws-connector
  name: sapws-connector
spec:
  host: "sapws-connector-development.apps.ocp.virt.prospecta.com.au"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: sapws-connector
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status: {}
